--- a/app.yaml
+++ b/app.yaml
@@ -17,6 +17,10 @@ handlers:
   static_files: index.html
   upload: index.html
 
+- url: /favicon\.ico
+  static_files: favicon.ico
+  upload: favicon.ico
+
 - url: /
   static_files: index.html
   upload: index.html
